feat: Introduce user interface using JavaFX